# bamboo

./: .gitignore  README.md  justfile  pyproject.toml
docs/: usage.md
pkg/: README.md
pkg/models/: grandqc.py  medsiglip.py
src/bamboo/: error.py  types.py  utils.py  writer.py
src/bamboo/backend/: _brightfield.py
src/bamboo/cli/: __init__.py
src/bamboo/cli/brightfield/: __init__.py  nn.py  tile.py  utils.py
src/bamboo/image/: __init__.py  _brightfield.py
src/bamboo/models/: __init__.py  _manager.py  _semantic.py
src/bamboo/models/zoo/: __init__.py  _grandqc.py
src/bamboo/plot/: _temp.py
src/bamboo/tile/: __init__.py  _generator.py  _iter.py  _tile.py
src/bamboo/tile_/: __init__.py  _base.py  _generic.py  _iter.py  _rgb.py
src/bamboo/tools/: __init__.py  _resize.py
src/tests/: test_map.py  test_tile.py  test_utils.py  test_writer.py
src/tests/_fixtures/: images.py  slides.py
src/tests/backend/: test_backend_brightfield.py
src/tests/image/: test_image_brightfield.py
src/tests/models/: test_semantic.py
